<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMART-shop</string>
    <string name="action_settings">Settings</string>

    <string-array name="screen_array">
        <item>Вход | Регистрация</item>
        <item>Главная</item>
        <item>Кабинет</item>
        <item>Корзина</item>
        <item>Контакты</item>
        <item>Настройки</item>
        <item>Выход</item>
    </string-array>

    <string-array name="category_array_name">
        <item>Apple Store</item>
        <item>Телефоны и планшеты</item>
        <item>Бытовая техника</item>
        <item>ТВ / Аудио / Видео / Фото</item>
        <item>Ноутбуки и компьютерная техника</item>
        <item>Портативная техника</item>
        <item>Автотовары</item>
        <item>Детский мир</item>
    </string-array>

    <string-array name="profile_array_name">
        <item>"Фото"</item>
        <item>"Name"</item>
        <item>"Phone"</item>
        <item>"Email"</item>
        <item>"Address"</item>
        <item>Все заказы</item>
        <item>Корзина</item>
        <item>История просморов товаров</item>
        <item>Сообщения</item>
        <item>Уведомления</item>
        <item>Мои желания</item>
        <item>Выход</item>
    </string-array>

    <string-array name="profile_registration_array">
        <item>*ФИО пользователя</item>
        <item>*Логин</item>
        <item>*Пароль"</item>
        <item>*Подтверждение</item>
        <item>*E-mail</item>
        <item>*Телефон</item>
        <item>ICQ/Skype</item>
        <item>Адрес доставки</item>
        <item>Панель</item>
    </string-array>


    <string name="orders_all">Все заказы</string>
    <string name="browsing_history_products">История просморов товаров</string>
    <string name="massege">Сообщения</string>
    <string name="preferences_status">status</string>
    <string name="notice">Уведомления</string>

    <string-array name="category_array_id">
        <item>2984</item>
        <item>3092</item>
        <item>700</item>
        <item>140</item>
        <item>2635</item>
        <item>5596</item>
        <item>3045</item>
        <item>4032</item>
    </string-array>

    <string-array name="banner_array">
        <item>Nokia</item>
        <item>AKG</item>
        <item>PocketBook</item>
        <item>BMW</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="screen_one">Screen one</string>
    <string name="screen_two">Screen two</string>
    <string name="screen_three">Screen three</string>
    <string name="screen_four">Screen four</string>
    <string name="screen_five">Screen five</string>
    <string name="screen_six">Screen six</string>
    <string name="menu_search">search</string>
    <string name="hello">hello</string>
    <string name="hotlist">hotlist</string>
    <string name="action_search">action_search</string>

    <string name="is_server_host">http://smart-shop.ua/JHVafnmJKH/</string>
    <string name="is_server_local">http://10.0.3.2/denwer/</string>

    <string name="a_get_all_products">http://smart-shop.ua/JHVafnmJKH/a_get_all_products_two.php</string>
    <string name="url_details_product">http://smart-shop.ua/JHVafnmJKH/a_get_product_details.php</string>
    <string name="url_product_description">http://smart-shop.ua/JHVafnmJKH/a_get_product_description.php</string>
    <string name="url_get_category_products">http://smart-shop.ua/JHVafnmJKH/a_get_category_products.php</string>
    <string name="url_get_cproducts_from_category">http://smart-shop.ua/JHVafnmJKH/a_get_all_products_from_category.php</string>
    <string name="url_get_slider_main_page">http://smart-shop.ua/JHVafnmJKH/a_get_slider_main_page.php</string>
    <string name="url_get_slider_main_page_category">http://smart-shop.ua/JHVafnmJKH/a_get_slider_main_page_category.php</string>
    <string name="url_get_category_product_file_imege">http://smart-shop.ua/JHVafnmJKH/a_get_category_product_file_imege.php</string>
    <string name="url_set_user_registration">http://smart-shop.ua/JHVafnmJKH/a_set_user_registration.php</string>
    <string name="url_get_user_authorization">http://smart-shop.ua/JHVafnmJKH/a_get_user_authorization.php</string>
    <string name="url_get_search_products">http://smart-shop.ua/JHVafnmJKH/a_get_search_products_two.php</string>
    <string name="url_get_user">http://smart-shop.ua/JHVafnmJKH/a_get_user.php</string>
    <string name="url_get_conact">http://smart-shop.ua/JHVafnmJKH/a_get_contact.php</string>

    <string name="status_switch_title">Статусы заказов</string>
    <string name="status_switch_summary">Будут приходить сообщения при изменении статусов заказов.</string>
    <string name="online_supports_switch_title">Онлайн поддержка</string>
    <string name="online_support_switch_summary">Вы сможете задавать свои вопросы в онлайне.</string>
    <string name="delite_history_product_switch_summary">После выхода из программы будет очищена история просмотров товаров.</string>
    <string name="delite_history_product_switch_title">Очищать историю по товарам</string>

    <string name="design">Оформить</string>
    <string name="pay">Оплата</string>
    <string name="cart">Корзина</string>
    <string name="page_one">tag1</string>
    <string name="page_two">tag2</string>
    <string name="page_three">tag3</string>

    <string name="discription">Описание</string>
    <string name="goods">Товар</string>
    <string name="delyvery">Доставка</string>
    <string name="category_all">Все категории</string>
    <string name="category_shares">Акции</string>
    <string name="currency"> грн.</string>
    <string name="price">Цена- </string>



    <string name="pickup">Самовывоз</string>
    <string name="shipping_address">Доставка по адресу</string>
    <string name="pickup_courier_service">Самовывоз с курьерской службы</string>

    <string name="cart_in_empty">(В корзине пусто)</string>
    <string name="no_data">(Нет данных)</string>
    <string name="input">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="cabinet">Кабинет</string>


</resources>
